# Mathematics-of-Coexistence

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  VERIFICATION.md  pyproject.toml
.github/workflows/: build-paper.yml  ci.yml  release.yml
modules/: __init__.py  figure_data.py  game_theory.py  information.py  lagrangian.py  negentropy.py  plotting.py  thermodynamics.py  value_dynamics.py  verify.py
paper/: 00-abstract.md  01-introduction.md  02-literature-review.md  03-axioms-definitions.md  04-rights-constraints.md  05-ethics-equilibrium.md  06-stress-testing.md  07-applications.md  08-limitations-scope-future.md  09-conclusion.md  latex-preamble.tex  metadata.yaml  references.bib
scripts/: build_guide.py  build_paper.py  build_summary.py  generate_figures.py  run_verification.py
scripts/figures/: fig_adversarial_friction.py  fig_ai_foundation_collapse.py  fig_ai_resource_pareto.py  fig_burning_library.py  fig_burning_library_ai.py  fig_cooperative_ai_equilibrium.py  fig_cooperative_equilibrium.py  fig_deception_entropy.py  fig_deceptive_alignment_entropy.py  fig_foundation_collapse.py  fig_institutional_collapse.py  fig_recovery_time.py  fig_resource_pareto.py  fig_reward_hacking_friction.py  fig_tipping_threshold.py
scripts/simulations/: verify_game_theory.py
scripts/simulations/ai-applications/: verify_ai_biosphere_preservation.py  verify_ai_cooperative_equilibrium.py  verify_ai_deception_entropy.py  verify_ai_foundation_collapse.py  verify_ai_misalignment_friction.py  verify_ai_resource_constraints.py
scripts/simulations/applications/: verify_deception_entropy.py  verify_misalignment_friction.py
scripts/simulations/applied/: verify_adversarial_friction.py  verify_biosphere_preservation.py  verify_cooperative_equilibrium.py  verify_deception_entropy.py  verify_institutional_collapse.py  verify_resource_constraints.py  verify_tariff_value_dynamics.py
supplementary/: ethics-theorem-guide.md  guide-preamble.tex  summary-preamble.tex
supplementary/A-mathematical-derivations/: game-theory-payoffs.md  information-negentropy.md  lagrangian-constraints.md  thermodynamic-friction.md  value-dynamics.md
supplementary/E-conceptual-overview/: conceptual-overview.md
tex/shared/: main.bib
(+19 files in other folders)
